# nightingale-sre

./: .gitignore  ARCHITECTURE_DIAGRAM.md  LICENSE  README.md  SAFETY.md  TELEMETRY.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
demo_repo/: README.md  test_app.py  test_fibonacci.py  test_formatter.py
demo_repo/.github/workflows/: test.yml
nightingale/: config.py  types.py
nightingale/agents/: marathon.py  verifier.py
nightingale/analysis/: blast_radius.py  confidence.py  reporter.py  resolution.py
nightingale/api/: __init__.py  webhook.py
nightingale/core/: context.py  database.py  gemini_client.py  github_pr.py  listener.py  logger.py  openai_client.py  orchestrator.py  sandbox.py  slack_notifier.py  workflow_parser.py
nightingale/demo/: scenario.py
nightingale/static/: index.html
website/: docs.html  index.html
