[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nightingale"
version = "0.1.0"
description = "Autonomous SRE Agent"
authors = [
  { name="Maxout Labs", email="teammaxout26@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "gitpython>=3.1.0",
    "rich>=13.0",
    "pytest>=7.0",
    "google-generativeai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/maxoutlabs/nightingale-sre"
Repository = "https://github.com/maxoutlabs/nightingale-sre"

[tool.setuptools.packages.find]
where = ["."]
include = ["nightingale*"]
